# rp2040_pio_stepper

./: .gitignore  .gitmodules  BUILD.txt  CLAUDE.md  CMakeLists.txt  README.md  pre-commit  pre-commit-tests  rp2040_hat_c-patch.cmake  test.c
.claude/: settings.json
config/frankencnc/: frankencnc.hal  frankencnc.ini  picoEthCNC_r1.hal  picoEthCNC_r1.ini
config/frankencnc_velmode/: frankencnc_velmode.hal  frankencnc_velmode.ini
config/pico-eth-cnc-3axis/: pico-eth-cnc-3axis.hal  pico-eth-cnc-3axis.ini  postgui_call_list.hal
config/pico-eth-cnc-4axis/: custom.hal  pico-eth-cnc-4axis.hal  pico-eth-cnc-4axis.ini
config/pico-eth-cnc-6axis/: pico-eth-cnc-6axis.hal  pico-eth-cnc-6axis.ini
config/pico-eth-cnc-8axis/: pico-eth-cnc-8axis.hal  pico-eth-cnc-8axis.ini
config/pico-eth-cnc-breakout/: pico-eth-cnc-breakout.hal  pico-eth-cnc-breakout.ini
config/pico-eth-cnc-gantry/: pico-eth-cnc-gantry.hal  pico-eth-cnc-gantry.ini
config/shared/: rp2040_types.ini
docs/: architecture.md  branch_integration.md  hal_pins.md  hal_reference.md  setup.md
docs/arch/: message-flow.md  pio-stepgen.md  timing.md
docs/arch/diagrams/: hub.dot  message-flow.dot  pio-stepgen.dot  timing.dot
docs/superpowers/plans/: 2026-04-11-core0-timing-refactor.md  2026-04-11-core1-refactor.md  2026-04-12-uart-build-info.md  2026-04-13-driver-refactor.md  2026-04-20-pio-readability-testability.md  2026-04-21-pio-integer-math.md  2026-04-21-pio-whole-step-accumulator.md  2026-04-22-remove-diagnostic-roundtrips.md
docs/superpowers/specs/: 2026-04-11-core1-refactor-design.md  2026-04-12-uart-build-info-design.md  2026-04-13-driver-refactor-design.md  2026-04-20-pio-readability-testability-design.md  2026-04-21-core1-sync-and-pio-miss-design.md  2026-04-21-pio-accel-limiting-design.md  2026-04-21-pio-integer-math-design.md  2026-04-22-remove-diagnostic-roundtrips-design.md  2026-04-22-remove-get-velocity-design.md  2026-05-03-step-dir-polarity-design.md
libraries/: CMakeLists.txt  FetchCMocka.cmake
pico_stepper/: CMakeLists.txt  pico_stepper.c  pico_stepper.h  pico_stepper.pio
scripts/hooks/: ctx-session-start.sh  pre-commit
sender/: CMakeLists.txt  config.c  config.h  core1.c  pico_stepper.pio  pio.c  pio.h  sender.c  sender.h
shared/: messages.h
src/driver/: defualt_rp2040_eth_gpio.hal  frakencnc.hal  frakencnc.ini  frankencnc.hal  frankencnc.ini  frankencnc_abs_pos.hal  frankencnc_abs_pos.ini  frankencnc_no_feedback.hal  frankencnc_no_feedback.ini  hal_rp2040_eth.c  hal_skeleton.c  rp2040_defines.h  rp2040_eth_state.c  rp2040_gpio_types.ini  rp2040_network.c  skeleton.h
src/rp2040/: CMakeLists.txt  config.c  config.h  convert_to_emulator_hex.py  core0.c  core0.h  core1.c  core1.h  gen_build_info.cmake  gpio.c  gpio.h  i2c.c  i2c.h  mcp23017.c  modbus.c  modbus.h  modbus_fuling.c  modbus_huanyang.c  modbus_weiken.c  network.c  network.h  pico_stepper.pio  pio.c  pio.h  pio_utils.c  ring_buffer.c  ring_buffer.h  stepper_control.c  stepper_control.h  timing.c  timing.h
src/shared/: buffer.c  buffer.h  checksum.c  messages.h  version.h
src/test/: CMakeLists.txt  driver_eth_state_test.c  driver_get_reply_test.c  driver_gpio_test.c  driver_network_PCtoRP_test.c  driver_network_RPtoPC_test.c  driver_network_test.c  network_test.c  ring_buffer_test.c  rp_core1_test.c  rp_get_udp_test.c  rp_gpio_test.c  rp_multi_update_test.c  rp_network_test.c  rp_network_tx_test.c  rp_pio_test.c  shared_buffer_test.c  shared_checksum_test.c  timing_test.c
src/test/mocks/: config_mocks.c  driver_mocks.c  driver_mocks.h  i2c_mocks.c  i2c_mocks.h  modbus_mocks.c  network_mocks.c  network_mocks.h  pio_mocks.c  pio_mocks.h  ringbuffer_mocks.c  rp_mocks.c  rp_mocks.h  socket_mocks.c  socket_mocks.h  watchdog_mocks.h
src/test/test_stubs/pico/: stdlib.h
src/test_client/: debug_methods.c  debug_methods.h  graphing.py  simple_udp.c  udp.c
test_client/: graphing.py  udp.c  udp_v0.2.c
